--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>this is a new feaure</h1>
     <p>thisis a new repo</p>
+
+    <div class="class">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, aliquid?</p>
+    </div>
 </body>
 </html>
