--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div class="class">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, aliquid?</p>
+        <p>this is new para (button)</p>
     </div>
 </body>
 </html>
